feat(user): add reconstruct private key hex encoded for export private key support
